--- a/styles/main.css
+++ b/styles/main.css
@@ -3,36 +3,111 @@ html, body {
 	width: 100%;
 	margin: 0px;
 	padding: 0px;
-}
-
-#container {
-	width: 100%;
-	height: 100%;
-	margin: 0px;
-	padding: 0px;
-	background-color: rgb(200,50,50);
-}
-
-#mainimage {
-	width: 100%;
-	margin: auto;
-	align-content: center;
-	padding: 10px 0px 10px 0px;
-}
-
-#mainimageimg {
-	display: block;
-	margin: auto;
-}
-
-#maintext {
-	width: 100%;
-	text-align: center;
-	font-size: 1em;
 	font-family: sans-serif;
-	color: white;
-	text-shadow: 2px 0 0 #000, 0 -2px 0 #000, 0 2px 0 #000, -2px 0 0 #000;
-	padding: 10px 0px 10px 0px;
-	margin: auto;
 }
 
+.container, .container-fluid {
+	background-color: rgb(179, 27, 27);
+	padding-left: 0px;
+	padding-right: 0px;
+}
+
+.jumbotron {
+	min-height: 768px;
+	background-image: url(https://upload.wikimedia.org/wikipedia/commons/3/34/Cornell_University,_Ho_Plaza_and_Sage_Hall.jpg);
+	background-size: 100%;
+	background-position: center;
+	background-repeat: no-repeat;
+	display: flex;
+	align-items: center;
+	margin-top: 0px;
+	margin-bottom: 0px;
+	font-family: serif;
+}
+
+#header {
+	color: white;
+	padding: 10px;
+	margin: 0px;
+	width: 100%;
+	background-color: rgb(179, 27, 27);
+	font-family: serif;
+	display: inline-block;
+}
+
+#header-name, #header-logo {
+	padding: 0px;
+	margin: 0px 5px;
+	float: left;
+}
+
+#header-name {
+	margin-top: 30px;
+}
+
+#main {
+	padding: 10px;
+	color: white;
+}
+
+p {
+	font-size: 20px;
+	text-indent: 4em;
+}
+
+#main-header {
+	color: rgb(255, 45, 45);
+	background-color: rgb(255,255,255);
+	/*text-shadow: 2px 0 0 #333, 0 -2px 0 #333, 0 2px 0 #333, -2px 0 0 #333;*/
+	margin: auto;
+	width: auto;
+	padding: 30px 50px;
+	border-radius: 100%;
+	box-shadow: 0 0 5px 10px rgb(255,255,255);
+}
+
+#main>div {
+	border: 1px white dashed;
+	border-radius: 20px;
+}
+
+#education {
+}
+
+#interests {
+}
+
+#projects {
+	margin: 10px 0px;
+}
+
+#interests ul {
+	list-style: none;
+	float: left;
+}
+
+#projects ul {
+	list-style: none;
+}
+
+a :link {
+	text-decoration: none;
+	color: rgb(11, 187, 84);
+}
+
+a :visited {
+	color: rgb(50, 187, 84);
+}
+
+a :hover {
+    transform: translate(0px, 2px);
+}
+
+li {
+	font-size: 21px;
+}
+
+#projects ul li {
+	display: inline-block;
+	float: left;
+}
