--- a/styles/main.css
+++ b/styles/main.css
@@ -18,6 +18,7 @@ html, body {
 	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
+	background-attachment: fixed;
 	display: flex;
 	align-items: center;
 	margin-top: 0px;
